Name:          hsqml-demo-samples
Version:       0.3.4.0
Cabal-version: >= 1.10
Build-type:    Simple
License:       BSD3
License-file:  LICENSE
Copyright:     (c) 2014-2016 Robin KAY
Author:        Robin KAY
Maintainer:    komadori@gekkou.co.uk
Stability:     experimental
Homepage:      http://www.gekkou.co.uk/software/hsqml/
Category:      Graphics, GUI
Synopsis:      HsQML sample programs
Data-dir:      qml
Data-files:    *.qml
Extra-source-files:
    CHANGELOG
Description:
    HsQML sample programs

Executable hsqml-factorial1
    Default-language: Haskell2010
    Hs-source-dirs: src
    Main-is: Factorial1.hs
    Build-depends:
        base       == 4.*,
        text       >= 2.0 && < 2.1,
        hsqml      == 0.3.*
    GHC-options: -threaded

Executable hsqml-factorial2
    Default-language: Haskell2010
    Hs-source-dirs: src
    Main-is: Factorial2.hs
    Build-depends:
        base       == 4.*,
        text       >= 2.0 && < 2.1,
        hsqml      == 0.3.*
    GHC-options: -threaded

Executable hsqml-model1
    Default-language: Haskell2010
    Hs-source-dirs: src
    Main-is: Model1.hs
    Build-depends:
        base       == 4.*,
        text       >= 2.0 && < 2.1,
        hsqml      >= 0.3.4 && < 0.4
    GHC-options: -threaded

Executable hsqml-opengl1
    Default-language: Haskell2010
    Hs-source-dirs: src
    Main-is: OpenGL1.hs
    Build-depends:
        base       == 4.*,
        text       >= 2.0 && < 2.1,
        OpenGL     >= 3.0 && < 3.1,
        OpenGLRaw  >= 3.3  && < 3.4,
        hsqml      >= 0.3.2 && < 0.4
    GHC-options: -threaded

Executable hsqml-opengl2
    Default-language: Haskell2010
    Hs-source-dirs: src
    Main-is: OpenGL2.hs
    Build-depends:
        base       == 4.*,
        text       >= 2.0 && < 2.1,
        OpenGL     >= 3.0 && < 3.1,
        OpenGLRaw  >= 3.3  && < 3.4,
        hsqml      >= 0.3.3 && < 0.4
    GHC-options: -threaded

Source-repository head
    type:     darcs
    location: http://hub.darcs.net/komadori/hsqml-demo-samples
